---------------------------------------------------------------------------------------------------
Version: 1.3.15
Date: 2021-??-??
  Features:
    - Removed superfluous setting regarding stack size for tiles.
      - Actually taken care of in angelsrefining
---------------------------------------------------------------------------------------------------
Version: 1.3.14
Date: 2020-11-24
  Features:
    - Updated to version 1.1
    - Tweaked the garden creation recipes to be researched a tad later
      - when you first get access to soil and fertiliser
---------------------------------------------------------------------------------------------------
Version: 1.3.13
  Features:
    - Quickpatch of Phosphoric acid recipe interferring with pyanodons variant 
      - (for those so inclined) 
    - Moved garden "spawning" from soil/fertiliser/fluid recipes to use the farm buildings 
---------------------------------------------------------------------------------------------------
Version: 1.3.12
  Features:
    - Adjusted the garden mutation recipes and added some garden generation recipes 
    - Delinked from bobmods, so this can be run in vanilla or pure angels 
  Bugfixes:
    - File consolidation if items and recipes, too many single table files for my liking 
    - Fixed a few recipe order and icon issues 
    - Moved some things that should have been in the extended materials mod to not be in this one 
---------------------------------------------------------------------------------------------------
Version: 1.3.11
  Features:
    - Prepared for updates to angels industries 
  Bugfixes:
    - Fixed that I was setting require behind mod checks potentially causing CRC fails in multiplayer 
---------------------------------------------------------------------------------------------------
Version: 1.3.10
  Features:
    - Updated number icons to reference angels refining not petrochem (in prep for incoming update) 